Fix: Bugs with cloudcannon

--- a/component-library/components/generic/team-member/team-member.bookshop.toml
+++ b/component-library/components/generic/team-member/team-member.bookshop.toml
@@ -8,7 +8,7 @@ tags = []
 
 # Defines the structure of this component, as well as the default values
 [blueprint]
-image_src = ''
+image = ''
 image_alt = ''
 name = ''
 job_title = ''
@@ -22,7 +22,7 @@ instagram_url = ''
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 [preview]
-image_src = 'images/team/team-pic1.jpg'
+image = 'images/team/team-pic1.jpg'
 image_alt = 'Team img'
 name = 'aurelien salomo'
 job_title = 'Creative Director'
