--- a/component-library/components/sections/case-study/case-study.bookshop.toml
+++ b/component-library/components/sections/case-study/case-study.bookshop.toml
@@ -16,7 +16,7 @@ image_alignment = 'right'
 background_color = 'grey'
 heading = ''
 content_html = ''
-image_src = ''
+image = ''
 image_alt = ''
 [blueprint.left_right_blocks.button]
 url = ''
@@ -31,7 +31,7 @@ image_alignment = 'right'
 background_color = 'grey'
 heading = 'hello'
 content_html = 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euiyd tincidunt ut laoreet dolore magna aliquam nibh utpat.Ullamcorper suscipit lobo nibh euiyd tinci- dunt ut laoreet.</br> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem impedit molestias cumque dolorum, sunt, provident blanditiis tempora, aut explicabo error ipsa repudiandae. Dolores eius eaque eum mollitia esse nisi necessitatibus distinctio ea, dolorem non, optio minima temporibus blanditiis, quidem aperiam!</p>'
-image_src = ''
+image = ''
 image_alt = ''
 [preview.left_right_blocks.button]
 url = ''
@@ -41,7 +41,7 @@ image_alignment = 'right'
 background_color = 'black'
 heading = 'hello'
 content_html = 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euiyd tincidunt ut laoreet dolore magna aliquam nibh utpat.Ullamcorper suscipit lobo nibh euiyd tinci- dunt ut laoreet.</br> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem impedit molestias cumque dolorum, sunt, provident blanditiis tempora, aut explicabo error ipsa repudiandae. Dolores eius eaque eum mollitia esse nisi necessitatibus distinctio ea, dolorem non, optio minima temporibus blanditiis, quidem aperiam!</p>'
-image_src = ''
+image = ''
 image_alt = ''
 [preview.left_right_blocks.button]
 url = '#'
@@ -50,6 +50,11 @@ content = 'View more'
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 [_inputs]
+background_color.type = 'select'
+background_color.options.values = ['grey', 'black']
+[_inputs.left_right_blocks]
+image_alignment.type = 'select'
+image_alignment.options.values = ['right', 'left']
 background_color.type = 'select'
 background_color.options.values = ['grey', 'black']
 
