--- a/component-library/components/sections/testimonials-block/testimonials-block.bookshop.toml
+++ b/component-library/components/sections/testimonials-block/testimonials-block.bookshop.toml
@@ -13,7 +13,7 @@ background_image = ''
 heading = ''
 [[blueprint.testimonials]]
 content = ''
-author_image_src = ''
+author_image = ''
 author_image_alt = ''
 author_name = ''
 author_career = ''
@@ -25,7 +25,7 @@ background_image = 'images/slider/bg-3.jpg'
 heading = 'Clients Opinion'
 [[preview.testimonials]]
 content = 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna. ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo vitae natus odio quasi recusandae, esse! Libero ipsum cum aliquid, nisi, maiores animi iste vel consectetur error facilis quae ducimus sint beatae vitae nesciunt explicabo esse nam. Soluta harum ipsa officia nam adipisci velit debitis! Dolore a ducimus, assumenda aspernatur fugit!'
-author_image_src = 'images/clients-img1.png'
+author_image = 'images/clients-img1.png'
 author_image_alt = 'Clients'
 author_name = 'Paul Lapkin'
 author_designation = 'CEO at DeviserWeb'
