--- a/component-library/components/generic/client-logo/client-logo.bookshop.toml
+++ b/component-library/components/generic/client-logo/client-logo.bookshop.toml
@@ -8,12 +8,12 @@ tags = []
 
 # Defines the structure of this component, as well as the default values
 [blueprint]
-image_src = ''
+image = ''
 image_alt = ''
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 [preview]
-image_src = 'images/clients-logo/client-logo-1.png'
+image = 'images/clients-logo/client-logo-1.png'
 image_alt = 'Client Logo'
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
