--- a/component-library/components/generic/button/button.bookshop.yml
+++ b/component-library/components/generic/button/button.bookshop.yml
@@ -1,20 +1,21 @@
 # Metadata about this component, to be used in the CMS
-[spec]
-structures = ['content_blocks']
-label = 'Welcome'
-description = 'Welcome block'
-icon = 'pan_tool'
-tags = []
+spec:
+  structures:
+    - ""
+  label: Button
+  description: Button
+  icon: smart_button
+  tags: []
 
 # Defines the structure of this component, as well as the default values
-[blueprint]
-heading = ''
-content = ''
+blueprint:
+  url: ""
+  content: ""
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
-[preview]
-heading = 'Hello'
-content = 'Welcome to this hugo, bookshop, and alpine.js template site'
+preview:
+  url: "#"
+  content: View More
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-[_inputs]
+_inputs: {}
