--- a/component-library/components/generic/heading/heading.bookshop.yml
+++ b/component-library/components/generic/heading/heading.bookshop.yml
@@ -1,20 +1,19 @@
 # Metadata about this component, to be used in the CMS
-[spec]
-structures = ['content_blocks']
-label = 'Big hero'
-description = 'Big hero block'
-icon = 'title'
-tags = []
+spec:
+  structures:
+    - ""
+  label: Heading
+  description: Generic heading
+  icon: title
+  tags: []
 
 # Defines the structure of this component, as well as the default values
-[blueprint]
-heading = ''
-background_image = ''
+blueprint:
+  heading: ""
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
-[preview]
-heading = 'We’re Creative <br>We Ensure Quality Design'
-background_image = '/images/slider/bg-1.jpg'
+preview:
+  heading: Case Study
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-[_inputs]
+_inputs: {}
