--- a/component-library/components/sections/big-hero/big-hero.bookshop.yml
+++ b/component-library/components/sections/big-hero/big-hero.bookshop.yml
@@ -1,19 +1,21 @@
 # Metadata about this component, to be used in the CMS
-[spec]
-structures = ['']
-label = 'Heading'
-description = 'Generic heading'
-icon = 'title'
-tags = []
+spec:
+  structures:
+    - content_blocks
+  label: Big hero
+  description: Big hero block
+  icon: title
+  tags: []
 
 # Defines the structure of this component, as well as the default values
-[blueprint]
-heading = ''
+blueprint:
+  heading: ""
+  background_image: ""
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
-[preview]
-heading = 'Case Study'
-
+preview:
+  heading: We’re Creative <br>We Ensure Quality Design
+  background_image: /images/slider/bg-1.jpg
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-[_inputs]
+_inputs: {}
