--- a/component-library/components/sections/welcome/welcome.bookshop.yml
+++ b/component-library/components/sections/welcome/welcome.bookshop.yml
@@ -1,21 +1,21 @@
 # Metadata about this component, to be used in the CMS
-[spec]
-structures = ['']
-label = 'Button'
-description = 'Button'
-icon = 'smart_button'
-tags = []
+spec:
+  structures:
+    - content_blocks
+  label: Welcome
+  description: Welcome block
+  icon: pan_tool
+  tags: []
 
 # Defines the structure of this component, as well as the default values
-[blueprint]
-url = ''
-content = ''
+blueprint:
+  heading: ""
+  content: ""
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
-[preview]
-url = '#'
-content = 'View More'
+preview:
+  heading: Hello
+  content: Welcome to this hugo, bookshop, and alpine.js template site
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-[_inputs]
-
+_inputs: {}
