--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "run-p javascript hugo-server javascript",
-    "dev": "run-p javascript hugo-server bookshop",
+    "dev": "run-p javascript-dev hugo-server bookshop",
+    "init": "npx @bookshop/init@latest",
     "hugo-server": "hugo server -D --watch",
     "build": "hugo --source ./ --destination public --baseURL /",
+    "javascript-dev": "esbuild assets/js/index.js --bundle --outfile=assets/js/build.js --watch",
     "javascript": "esbuild assets/js/index.js --bundle --outfile=assets/js/build.js",
     "bookshop": "npx @bookshop/browser@latest",
+    "bookshop-update": "npx @bookshop/up@latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
