Fix/test: nest component

--- a/component-library/components/sections/case-study/case-study.bookshop.yml
+++ b/component-library/components/sections/case-study/case-study.bookshop.yml
@@ -13,53 +13,13 @@ blueprint:
   heading:
     heading: ""
   left_right_blocks:
-    - image_alignment: right
-      background: grey
-      heading: ""
-      content_html: ""
-      image: ""
-      image_alt: ""
-      button:
-        url: ""
-        content: ""
+    - bookshop:simple/left-right-block
+    - bookshop:simple/left-right-block
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   heading:
     heading: Case Study
-  left_right_blocks:
-    - image_alignment: right
-      background: grey
-      heading: hello
-      content_html: Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-        nonummy nibh euiyd tincidunt ut laoreet dolore magna aliquam nibh
-        utpat.Ullamcorper suscipit lobo nibh euiyd tinci- dunt ut laoreet.</br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem impedit
-        molestias cumque dolorum, sunt, provident blanditiis tempora, aut
-        explicabo error ipsa repudiandae. Dolores eius eaque eum mollitia esse
-        nisi necessitatibus distinctio ea, dolorem non, optio minima temporibus
-        blanditiis, quidem aperiam!</p>
-      image: ""
-      image_alt: ""
-      button:
-        url: ""
-        content: ""
-    - image_alignment: right
-      background: black
-      heading: hello
-      content_html: Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-        nonummy nibh euiyd tincidunt ut laoreet dolore magna aliquam nibh
-        utpat.Ullamcorper suscipit lobo nibh euiyd tinci- dunt ut laoreet.</br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem impedit
-        molestias cumque dolorum, sunt, provident blanditiis tempora, aut
-        explicabo error ipsa repudiandae. Dolores eius eaque eum mollitia esse
-        nisi necessitatibus distinctio ea, dolorem non, optio minima temporibus
-        blanditiis, quidem aperiam!</p>
-      image: ""
-      image_alt: ""
-      button:
-        url: "#"
-        content: View more
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
