--- a/component-library/components/sections/case-study/case-study.bookshop.yml
+++ b/component-library/components/sections/case-study/case-study.bookshop.yml
@@ -12,15 +12,16 @@ blueprint:
   background: grey
   heading:
     heading: ""
-  left_right_blocks:
-    - bookshop:simple/left-right-block
-    - bookshop:simple/left-right-block
+  left_right_blocks: bookshop:simple/left-right-block
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
   heading:
     heading: Case Study
-
+  left_right_blocks: 
+   - bookshop:simple/left-right-block
+   - bookshop:simple/left-right-block
+   
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
   background:
