--- a/component-library/components/generic/link/link.bookshop.yml
+++ b/component-library/components/generic/link/link.bookshop.yml
@@ -2,8 +2,8 @@
 spec:
   structures:
     - ""
-  label: Button
-  description: Button
+  label: link
+  description: link
   icon: smart_button
   tags: []
 
@@ -11,6 +11,7 @@ spec:
 blueprint:
   url: ""
   content: ""
+  style: "primary"
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
@@ -18,4 +19,10 @@ preview:
   content: View More
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-_inputs: {}
+_inputs:
+  style:
+    type: select
+    options:
+      values:
+        - primary
+        - seconary
