--- a/component-library/components/sections/pricing-table/pricing-table.bookshop.yml
+++ b/component-library/components/sections/pricing-table/pricing-table.bookshop.yml
@@ -9,7 +9,7 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-    heading: bookshop:genric/heading
+    heading: bookshop:generic/heading
     pricing_plans: [bookshop:simple/pricing-plan]
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
