--- a/component-library/components/sections/pricing-table/pricing-table.bookshop.yml
+++ b/component-library/components/sections/pricing-table/pricing-table.bookshop.yml
@@ -1,7 +1,7 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-    - ""
+    - content_blocks
   label: Pricing table
   description: A table of different pricing plans available
   icon: 
