Fix: Tell cloudcannon to use schema for default portfolio item creation

--- a/cloudcannon.config.yaml
+++ b/cloudcannon.config.yaml
@@ -2,3 +2,9 @@ collections_config:
   pages:
     _enabled_editors:
       - visual
+  portfolios:
+    schemas:
+      default:
+        path: schemas/portfolio.md
+    _enabled_editors:
+      - visual
