Feat: Completed main blog list posts page

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,14 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'fiction-hugo-template'
 
+Paginate = 3
+
+[taxonomies]
+category = "categories"
+
+[permalinks]
+posts = ":section/:year/:month/:day/:title/"
+
 [module]
 replacements = "local/component-library -> ../component-library"
 
