Feat: Contact page components completed

--- a/data/company.yml
+++ b/data/company.yml
@@ -1,6 +1,9 @@
+company_name: REDCODDER SOLUTION
 contact:
   address: "DeviserWeb 24/A,Jalalabad amborkhana amagnina, Sylhet."
   phone: "+61 (0) 3 8366 6274"
+  mobile: 01771-299299
+  web_address: deviserweb.com
   email: "info@info.com"
 social_media:
   facebook: "#"
