--- a/component-library/components/sections/client-logos/client-logos.bookshop.yml
+++ b/component-library/components/sections/client-logos/client-logos.bookshop.yml
@@ -16,11 +16,11 @@ blueprint:
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
-  background_image: images/slider/bg-1.jpg
+  background_image: /images/slider/bg-1.jpg
   client_logos:
-    - image: images/clients-logo/client-logo-1.png
+    - image: /images/clients-logo/client-logo-1.png
       image_alt: Client Logo
-    - image: images/clients-logo/client-logo-1.png
+    - image: /images/clients-logo/client-logo-1.png
       image_alt: Client Logo
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
