--- a/component-library/components/sections/big-hero/big-hero.bookshop.yml
+++ b/component-library/components/sections/big-hero/big-hero.bookshop.yml
@@ -10,11 +10,13 @@ spec:
 # Defines the structure of this component, as well as the default values
 blueprint:
   heading: ""
+  subheading: ""
   background_image: ""
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
-  heading: We’re Creative <br>We Ensure Quality Design
+  heading: We’re Creative
+  subheading: We Ensure Quality Design
   background_image: /images/slider/bg-1.jpg
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
