--- a/component-library/components/simple/business-card/business-card.bookshop.yml
+++ b/component-library/components/simple/business-card/business-card.bookshop.yml
@@ -3,7 +3,7 @@ spec:
   structures:
   label: Business card
   description: Business details with images
-  icon: 
+  icon: business
   tags: []
 
 # Defines the structure of this component, as well as the default values
