--- a/component-library/components/sections/gallery/gallery.bookshop.yml
+++ b/component-library/components/sections/gallery/gallery.bookshop.yml
@@ -4,7 +4,7 @@ spec:
     - content_blocks
   label: Gallery
   description: Gallery of image links
-  icon: 
+  icon: burst_mode
   tags: []
 
 # Defines the structure of this component, as well as the default values
