--- a/component-library/components/sections/map-and-details/map-and-details.bookshop.yml
+++ b/component-library/components/sections/map-and-details/map-and-details.bookshop.yml
@@ -4,7 +4,7 @@ spec:
     - content_blocks
   label: Map and Details
   description: Company details with a map showing company location
-  icon: 
+  icon: map
   tags: []
 
 # Defines the structure of this component, as well as the default values
