--- a/component-library/components/sections/staff-block/staff-block.bookshop.yml
+++ b/component-library/components/sections/staff-block/staff-block.bookshop.yml
@@ -9,42 +9,17 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  heading:
-    heading: ""
-  team_members:
-    - image: ""
-      image_alt: ""
-      name: ""
-      job_title: ""
-      description: ""
-      facebook_url: ""
-      twitter_url: ""
-      linkedin_url: ""
-      google_url: ""
-      instagram_url: ""
-  link:
-    url: ""
-    content: ""
+  heading: bookshop:generic/heading
+  team_members: [bookshop:generic/team-memeber]
+  link: bookshop:generic/link
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
-  heading:
-    heading: Our specialized team
+  heading: bookshop:generic/heading
   team_members:
-    - image: /images/team/team-pic1.jpg
-      image_alt: Team img
-      name: aurelien salomo
-      job_title: Creative Director
-      description: Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-        ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim.
-      facebook_url: "#"
-      twitter_url: "#"
-      linkedin_url: "#"
-      google_url: "#"
-      instagram_url: "#"
-  link:
-    url: "#"
-    content: View More
-
+    - bookshop:generic/team-memeber
+    - bookshop:generic/team-memeber
+    - bookshop:generic/team-memeber
+  link: bookshop:generic/link
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs: {}
