--- a/component-library/components/simple/slider-item/slider-item.bookshop.yml
+++ b/component-library/components/simple/slider-item/slider-item.bookshop.yml
@@ -1,8 +1,8 @@
 # Metadata about this component, to be used in the CMS
 spec:
   structures:
-  label: Services
-  description: Grid of icons with content
+  label: Slider item
+  description: Image and text to be used inside hero slider
   icon: image
   tags: []
 
