Fix: Add input type for video

--- a/component-library/components/sections/video-hero/video-hero.bookshop.yml
+++ b/component-library/components/sections/video-hero/video-hero.bookshop.yml
@@ -20,4 +20,7 @@ preview:
   background_video: /video/ocean
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
-_inputs: {}
+_inputs:
+  background_video:
+    type: file
+
