--- a/cloudcannon.config.yaml
+++ b/cloudcannon.config.yaml
@@ -2,5 +2,12 @@ collections_config:
   pages:
     _enabled_editors:
       - visual
-
+  portfolios:
+    schemas:
+      default:
+        path: schemas/portfolio.md
+  posts:
+    schemas:
+      default:
+        path: schemas/post.md
 data_config: true
