--- a/cloudcannon.config.yaml
+++ b/cloudcannon.config.yaml
@@ -1,13 +1,21 @@
 collections_config:
   pages:
+    schemas:
+      default:
+        path: schemas/page.md
     _enabled_editors:
       - visual
   portfolios:
     schemas:
       default:
         path: schemas/portfolio.md
+    _enabled_editors:
+      - visual
   posts:
     schemas:
       default:
         path: schemas/post.md
+    _enabled_editors:
+      - content
+      - visual
 data_config: true
