feat: make components live editable on portfolio and blog pages

--- a/component-library/components/sections/hero/hero.bookshop.yml
+++ b/component-library/components/sections/hero/hero.bookshop.yml
@@ -2,6 +2,7 @@
 spec:
   structures:
     - content_blocks
+    - hero_blocks
   label: Hero
   description: Small hero for single page layouts
   icon: title
