--- a/cloudcannon.config.yaml
+++ b/cloudcannon.config.yaml
@@ -2,6 +2,9 @@ collections_config:
   pages:
     _enabled_editors:
       - visual
+    schemas:
+      page:
+        path: schemas/page.md
   portfolios:
     schemas:
       default:
@@ -15,4 +18,5 @@ collections_config:
     _enabled_editors:
       - content
       - visual
+
 data_config: true
